--- a/head.css
+++ b/head.css
@@ -55,6 +55,7 @@ html[data-eager-blueprint="true"] [class*="btn-"] {
 }
 
 eager-blueprint-toggle {
+  z-index: 99999 !important;
   position: fixed !important;
   font-size: 16px !important;
   top: 16px !important;
@@ -63,6 +64,13 @@ eager-blueprint-toggle {
   display: block !important;
   height: 3.5em !important;
   width: 6.8em !important;
+}
+
+eager-blueprint-toggle *, eager-blueprint-toggle *:after, eager-blueprint-toggle *:before {
+  -moz-box-sizing: content-box !important;
+  -ms-box-sizing: content-box !important;
+  -o-box-sizing: content-box !important;
+  box-sizing: content-box !important;
 }
 
 #eager-blueprint-toggle {
